--- a/CellProfilerPipeLine.mkd.ipynb
+++ b/CellProfilerPipeLine.mkd.ipynb
@@ -151,6 +151,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Set up Cellpose module \n",
+    "\n",
+    "Before running the code, make sure that cellpose module is imported to the cellprofiler directory so that it can be loaded.\n",
+    "\n",
+    "To properlly set up cellpose module inside of the given cellprofiler pipeline, cellpose module should not be within the pipeline. \n",
+    "\n",
+    "In a given pipeline, delete the cellpose module, but make a note about the number of cellpose modules so that you can re-insert in here. \n",
+    "\n",
+    "To insert cellpose module, you need a module number, which is the location of the module in a pipeline, indicted by <code style=\"background:grey;color:white\">module.module_num</code>. You can check if the module is been properly inserted by print our the modules using ```pipeline.modules()```.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -162,7 +177,17 @@
     "module.module_num = 9\n",
     "pipeline.add_module(module)\n",
     "# pipeline.modules()[7] = pipeline.modules()[8]\n",
-    "pipeline.modules()"
+    "#pipeline.modules()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cellpose module in the pipeline starts with default setting. You can check the default setting using\n",
+    "```[print(setting.to_dict()) for setting in pipeline.modules()[8].settings()]```. The list number is 8 since python starts with 0. \n",
+    "\n",
+    "You can learned your pipeline setting by opening **.cpppl** files. Scrolling down to the RunCellpose module and you can see your settings. Change the default setting to your custom settings. Two settings, <code style=\"background:grey;color:white\">cp_module_dic</code> and <code style=\"background:grey;color:white\">cp_mudole</code> have been set previous, here shown in variables instead of strings. "
    ]
   },
   {
@@ -181,19 +206,14 @@
     "pipeline.modules()[8].setting(11).set_value(cp_mudole_dic)\n",
     "pipeline.modules()[8].setting(12).set_value(cp_mudole)\n",
     "pipeline.modules()[8].setting(21).set_value(\"No\")\n",
-    "[print(setting.to_dict()) for setting in pipeline.modules()[8].settings()]\n",
-    "\n",
-    "\n",
-    "\n"
+    "#[print(setting.to_dict()) for setting in pipeline.modules()[8].settings()]\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "[print(setting.to_dict()) for setting in pipeline.modules()[5].settings()]"
+    "Run cell profiler. Input files have been indicated previous and stored in images folder."
    ]
   },
   {
@@ -216,12 +236,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "output_measurements.get_measurement_columns()"
+    "## Step Three \n",
+    "You can directly get the output_measures by python, followed by data analysis."
    ]
   },
   {
@@ -229,7 +248,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output_measurements.get_measurement_columns()"
+   ]
   },
   {
    "cell_type": "code",
