--- a/cellpose_timelapse/custome_pipiline_runningcode.ipynb
+++ b/cellpose_timelapse/custome_pipiline_runningcode.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# setup napari to check if the UI is good\n",
+    "# setup napari to check if the UI is good or not\n",
     "import napari\n",
     "viewer = napari.view_imsage(skimage.io.imread(\"./file_full.ome.tif\"), colormap='red')"
    ]
