--- a/cellpose_timelapse/custom_pipeline/custome_pipiline_runningcode.ipynb
+++ b/cellpose_timelapse/custom_pipeline/custome_pipiline_runningcode.ipynb
@@ -80,13 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up time_elapse image\n",
+    "files = [\"file_full5.tif\"]\n",
+    "imgs = [skimage.io.imread(f) for f in files]\n",
     "# setup napari to check if the UI is good\n",
     "import napari\n",
-    "viewer = napari.view_image(skimage.io.imread(\"./file_full5.tif\"), colormap='red')"
+    "viewer = napari.view_image(imgs, colormap='red')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2 = AICSImage(img) # Open an czi image in file_list"
    ]
   },
   {
@@ -165,6 +178,18 @@
     "    plot.show_segmentation(fig, imgs[idx], maski, flowi, channels=channels)\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cellpose import io\n",
+    "io.masks_flows_to_seg(imgs_2D, masks, flows, diams, files, channels)\n",
+    "\n",
+    "#generate file with _seg.npy ending"
    ]
   },
   {
